# torchnvjpeg

./: .gitignore  CMakeLists.txt  README.md  ftest.py  setup.py
csrc/: torchnvjpeg.cpp  torchnvjpeg.h
sample/: gpuloader.py
torchnvjpeg/: __init__.py  __init__.pyi
